@startuml class_adapters.puml
title ESP32 Internet Radio - Class Diagram (Adapters)

skinparam backgroundColor white
skinparam shadowing false
skinparam linetype ortho
skinparam classAttributeIconSize 0
skinparam packageStyle rectangle
hide empty members
hide empty methods
hide empty fields
skinparam nodesep 25
skinparam ranksep 35

interface IAdcReader {
    +init(): bool
    +setupChannel(gpioNum: const uint32_t): bool
    +readRawBurst(gpioNum: const uint32_t, buffer: int*, count: const size_t): bool
}

interface IDisplay {
    +init(): bool
    +showFramebuffer(data: const uint8_t*, len: const size_t): bool
    +showWindow(col0: const uint8_t, col1: const uint8_t, page0: const uint8_t, page1: const uint8_t, data: const uint8_t*, len: const size_t): bool
}

interface IFileSystem {
    +init(): bool
    +deinit(): void
    +writeFile(relativePath: const std::string&, data: const std::string&): bool
    +readFile(relativePath: const std::string&, outData: std::string&): bool
    +exists(relativePath: const std::string&): bool
    +removeFile(relativePath: const std::string&): bool
    +renameFile(fromRelativePath: const std::string&, toRelativePath: const std::string&): bool
    +getUsage(outTotalBytes: size_t&, outUsedBytes: size_t&): bool
    +basePath(): std::string
}

interface IGpioInput {
    +init(): bool
    +deinit(): void
    +getLevel(gpioNum: const uint32_t): int
}

interface IHttpClient {
    +openStream(url: const std::string&, DefaultStreamTimeoutMs: const uint32_t& timeoutMs =): bool
    +readStream(buffer: uint8_t*, size: const size_t&): int
    +closeStream(): void
    +download(url: const std::string&, result: std::string&, DefaultDownloadTimeoutMs: const uint32_t& timeoutMs =): bool
    +isStreamOpen(): bool
    +getUrl(): const std::string&
    +getStatusCode(): int
}

interface II2cBus {
    +init(): bool
    +writeBytes(deviceAddr: const uint8_t, data: const uint8_t*, len: const size_t, timeoutMs: const uint32_t): bool
    +readBytes(deviceAddr: const uint8_t, data: uint8_t*, len: const size_t, timeoutMs: const uint32_t): bool
}

interface II2sBus {
    +init(): bool
    +deinit(): void
    +write(data: const int16_t*, size: const size_t&, timeoutMs: const uint32_t&): size_t
    +reconfigureClock(sampleRate: const uint32_t&): bool
    +getSampleRate(): uint32_t
}

interface IMp3Decoder {
    +decode(data: const uint8_t*, len: size_t, pcmOut: int16_t*, pcmSamplesCap: size_t): common::Mp3FrameInfo
    +reset(): void
}

interface IPersistentStorage {
    +init(): bool
    +setString(key: const std::string&, value: const std::string&): bool
    +getString(key: const std::string&, outVal: std::string&): bool
    +setU32(key: const std::string&, value: const uint32_t): bool
    +getU32(key: const std::string&, out: uint32_t&): bool
    +erase(key: const std::string&): bool
}

interface IProvisioningPortal {
    +start(cfg: const common::ProvisioningPortalConfig&, onSubmit: common::CredentialsCallback): bool
    +stop(): void
    +isRunning(): bool
    +getApIp(): std::string
}

interface IWifiClient {
    +init(): bool
    +deinit(): void
    +connect(creds: const common::WifiCredentials&): bool
    +waitForConnection(30000: uint32_t timeoutMs =): bool
    +disconnect(3000: uint32_t timeoutMs =): bool
    +startAccessPoint(cfg: const common::ProvisioningPortalConfig&): bool
    +stopAccessPoint(): bool
    +getApIp(): std::string
    +isConnected(): bool
    +getStatus(): std::string
    +setStateCallback(callback: common::WifiStateCallback): void
    +tryGetRssiDbm(): std::optional<int8_t>

}

class Queue

class AdcReader
class Display {
    -mI2cBus: II2cBus&
}
class FileSystem
class GpioInput {
    -mQueue: common::Queue<uint32_t>&
}
class HttpClient
class I2cBus
class I2sBus
class Mp3Decoder
class PersistentStorage
class ProvisioningPortal {
    -mWifiClient: IWifiClient&
}
class WifiClient

package "External" {
  class "ESP-IDF" as ESPIDF
}

AdcReader -down-> ESPIDF
Display -down-> ESPIDF
FileSystem -down-> ESPIDF
GpioInput -down-> ESPIDF
HttpClient -down-> ESPIDF
I2cBus -down-> ESPIDF
I2sBus -up-> ESPIDF
Mp3Decoder -up-> ESPIDF
PersistentStorage -up-> ESPIDF
ProvisioningPortal -up-> ESPIDF
WifiClient -up-> ESPIDF

AdcReader .down.|> IAdcReader
Display .up.|> IDisplay
Display --> I2cBus
FileSystem .up.|> IFileSystem
GpioInput .down.|> IGpioInput
GpioInput -up-> Queue
HttpClient .up.|> IHttpClient
I2cBus .left.|> II2cBus
I2sBus .right.|> II2sBus
Mp3Decoder .down.|> IMp3Decoder
PersistentStorage .up.|> IPersistentStorage
ProvisioningPortal .left.|> IProvisioningPortal
ProvisioningPortal --> IWifiClient
WifiClient .left.|> IWifiClient

@enduml
